The JumpToPage dialog now properly handles the Enter key press.

--- a/DjvuApp.Universal/Dialogs/Internal/JumpToPageDialogInternal.xaml
+++ b/DjvuApp.Universal/Dialogs/Internal/JumpToPageDialogInternal.xaml
@@ -10,7 +10,8 @@
     IsPrimaryButtonEnabled="False"
     Loaded="LoadedHandler"
     x:Uid="JumpToPageDialog"
-    DataContext="{Binding RelativeSource={RelativeSource Self}}">
+    DataContext="{Binding RelativeSource={RelativeSource Self}}"
+    KeyDown="KeyDownHandler">
 
     <StackPanel>
         <TextBox
