--- a/DjvuApp.Universal/Controls/ReaderControl.xaml
+++ b/DjvuApp.Universal/Controls/ReaderControl.xaml
@@ -9,7 +9,9 @@
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400"
-    SizeChanged="SizeChangedHandler">
+    SizeChanged="SizeChangedHandler"
+    KeyDown="KeyDownHandler"
+    KeyUp="KeyUpHandler">
     
     <FrameworkElement.Resources>
         <MenuFlyout x:Name="selectionContextMenu">
